[package]
name = "groupstool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
curl = { version = "0.4.43" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }
regex = { version = "1.5.5" }